# image-index-ai

./: Cargo.toml  Makefile  README.md  docker-compose.yml
frontend/: AGENTS.md  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/proxy/images/: route.ts
frontend/src/app/api/proxy/images/search/: route.ts
frontend/src/app/api/proxy/images/semantic-search/: route.ts
frontend/src/app/upload/: page.tsx
frontend/src/components/: image-card.tsx  navbar.tsx  providers.tsx  theme-toggle.tsx
frontend/src/components/gallery/: gallery-grid.tsx  search-bar.tsx
frontend/src/components/upload/: file-picker.tsx  status-badge.tsx  upload-item-card.tsx  upload-summary.tsx  upload-view.tsx  uploads-grid.tsx  use-uploads.ts
frontend/src/lib/: api.ts  config.ts  types.ts  utils.ts
src/: errors.rs  main.rs  migrations.rs  state.rs  storage.rs  tagging.rs
src/models/: photo.rs
src/routes/: images.rs
src/services/: lm_studio.rs  mod.rs
