[package]
name = "image-index-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
image = "0.23.14"
walkdir = "2.3.2"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
data-encoding = "2.3.3"
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.*", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
dotenvy = "0.15.0"


